--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "version": "0.0.0",
   "description": "A template for writing code in three.js and react in typescript",
   "author": "Afraj Attar",
+  "homepage": "https://afraj-attar/template",
   "license": "ISC",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --max-warnings 0 \"./src/**/*.{ts,tsx}\"",
-    "lint:fix": "eslint \"./src/**/*.{ts,tsx}\" --fix"
+    "lint:fix": "eslint \"./src/**/*.{ts,tsx}\" --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -28,6 +31,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.15.0",
     "eslint-config-react-app": "^7.0.1",
+    "gh-pages": "^3.2.3",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
   }
