Updated Home Page url Added vscode settings json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "description": "A template for writing code in three.js and react in typescript",
   "author": "Afraj Attar",
-  "homepage": "https://afraj-attar/template",
+  "homepage": "https://afraj-attar.github.io/vite-react-three.js-typescript-mui-template/",
   "license": "ISC",
   "scripts": {
     "dev": "vite",
