--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "vite-react-three.js-typescript-mui-template",
+  "name": "@afraj-attar/vite-react-three.js-typescript-mui-template",
   "private": true,
   "version": "0.0.0",
   "description": "A template for writing code in three.js and react in typescript",
   "author": "Afraj Attar",
   "homepage": "https://afraj-attar.github.io/vite-react-three.js-typescript-mui-template/",
   "license": "ISC",
+  "repository": "git://github.com/afraj-attar/vite-react-three.js-typescript-mui-template.git",
+  "publishConfig": {
+    "@afraj-attar:registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
