--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git://github.com/afraj-attar/vite-react-three.js-typescript-mui-template.git"
   },
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --max-warnings 0 \"./src/**/*.{ts,tsx}\"",
